k8s/product-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product
  namespace: ecomm
spec:
  selector:
    app: product
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
